--- a/_posts/ja/2025/06/2025-06-25-hello.md
+++ b/_posts/ja/2025/06/2025-06-25-hello.md
@@ -11,4 +11,4 @@ tags: []
 published: true
 ---
 
-こんにちは。これはテストです。ミスったので更新しました。またミスったので更新。今度こそうまくいくと信じる。
+こんにちは。これはテストです。ミスったので更新しました。またミスったので更新。今度こそうまくいくと信じる。もう何度目の正直だ？
